--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,7 +1,14 @@
 {
   "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
-  "extends": [
-    "ultracite/biome/core",
-    "ultracite/biome/next"
-  ]
+  "extends": ["ultracite/biome/core", "ultracite/biome/next"],
+  "javascript": {
+    "formatter": {
+      "quoteStyle": "single",
+      "trailingCommas": "all",
+      "semicolons": "asNeeded"
+    }
+  },
+  "files": {
+    "includes": ["**/*", "!components/ui/*"]
+  }
 }
