Update biome.jsonc to exclude 'template' from includes and change lint command in package.json to 'ultracite check'

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -9,6 +9,10 @@
     }
   },
   "files": {
-    "includes": ["**/*", "!components/ui/*"]
+    "includes": [
+      "**/*",
+      "!components/ui/*",
+      "!template"
+    ]
   }
 }
