--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "ultracite lint",
+    "lint": "ultracite check",
     "lint:fix": "ultracite fix"
   },
   "dependencies": {
