Refactor biome.jsonc to consolidate includes array formatting

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -9,10 +9,6 @@
     }
   },
   "files": {
-    "includes": [
-      "**/*",
-      "!components/ui/*",
-      "!template"
-    ]
+    "includes": ["**/*", "!components/ui/*", "!template"]
   }
 }
