--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
     "vaul": "^1.1.2",
+    "ws": "^8.19.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
@@ -49,6 +50,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/ws": "^8.18.1",
     "drizzle-kit": "^0.31.8",
     "tailwindcss": "^4",
     "typescript": "^5",
